Fri Jul 11 23:28:08 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * ChangeLog:

        * website/App_Code/DataSetActions.cs:
        * website/App_Code/LogFormatActions.cs:
        * website/App_Code/LogVariables.cs:
        * website/App_Code/UnitTestActions.cs:
        * website/BMW.master:
        * website/Log_Formats.aspx:
        * website/Log_Formats.aspx.cs:
        * website/UT_Chart.aspx:
        * website/UT_Chart.aspx.cs:
        * website/UT_Create.aspx:
        * website/UT_Create.aspx.cs:
        * website/bin:
        * website/charts:
        * website/controls/AddLogFormat.ascx:
        * website/controls/AddLogFormat.ascx.cs:
        * website/unittesting.aspx:
        * website/unittesting.aspx.cs:
        * website/xml:
        * website/xml/auto_generated.xml:

          . Merging the branch back into trunk

Fri Jul 11 22:46:31 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * website/unittesting.aspx:
        * website/unittesting.aspx.cs:

          . Minor Edits - commiting so we can merge this branch

Fri Jul 11 19:07:04 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>


        * metrics_temp:

          Removed entire directory from SVN. All development is ready to be
            done inside the website/ directory

Fri Jul 11 18:50:37 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * website/BMW.master:
        * website/unittesting.aspx:
        * website/unittesting.aspx.cs:

          . Added in a one stop-shop for managing and configuring unit testing,
              including creating test suites and packages, adding packages to
              suites, and adding unit tests to packages. Also includes a unit
              test details view which shows basics and the referenced log forms

        * website/Test_Packages.aspx:
        * website/Test_Packages.aspx.cs:
        * website/Test_Suites.aspx:
        * website/Test_Suites.aspx.cs: